<resources>
    <string name="appName">Alke Wallet</string>
    <string name="slogan">El lugar más seguro para tu dinero</string>
    <string name="crearCuenta">Crear cuenta nueva</string>
    <string name="tieneCuenta">¿Ya tiene cuenta?</string>
    <string name="registrarTitle">Registrese y empieze a transferir!</string>
    <string name="userName">Nombre</string>
    <string name="userApellido">Apellido</string>
    <string name="email">Ingresa tu e-mail</string>
    <string name="pass">ingresa una contraseña</string>
    <string name="cPass">Confirma tu contraseña</string>
    <string name="ready4Transf">¡Ya puedes empezar a transferir!</string>
    <string name="forgotPass">Olvidaste tu contraseña?</string>
    <string name="initSession">Iniciar sesión</string>
    <string name="init">Inicio</string>
    <string name="hi">Hola alkemy!</string>
    <string name="balanceT">Balance Total</string>
    <string name="sendMoney">Enviar dinero</string>
    <string name="requestMoney">Ingresar dinero</string>
    <string name="lastTrans">últimas transacciones</string>
    <string name="lastContact">Contactos recientes</string>
    <string name="mountTrans">Cantidad a transferir</string>
    <string name="editPencil">Editar perfil de usuario</string>
    <string name="transNote">Notas de transferencia </string>
    <string name="addCommentary">Añade un comentario (opcional)</string>
    <string name="mountReceive">Cantidad a ingresar</string>
    <string name="myProfile">Mi perfil</string>
    <string name="myInfo">Mi información</string>
    <string name="myCards">Mis tarjetas</string>
    <string name="options">Opciones</string>
    <string name="helpCenter">Centro de ayuda</string>
    <string name="closeSession">Cerrar sesión</string>
    <string name="noTrans">No hay transferencias registradas</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>

</resources>