<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3">

    <!-- Título superior -->

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="@dimen/et_tlsx"
        android:layout_height="wrap_content"
        android:text="@string/ready4Transf"
        android:textSize="@dimen/text_ld"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/etEmail"
        android:layout_marginTop="@dimen/margin_psl"/>

    <!-- Cuadro e-mail -->

    <EditText

        android:id="@+id/etEmail"
        style="@style/EditText"
        android:layout_width="@dimen/et_tlsx"
        android:layout_height="@dimen/et_ups"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="26dp"
        android:paddingVertical="13dp"

        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_psl" />

    <!-- Cuadro contraseña-->

    <EditText

        android:id="@+id/etPassword"
        style="@style/EditText"
        android:layout_width="@dimen/et_tlsx"
        android:layout_height="@dimen/et_ups"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:paddingHorizontal="26dp"
        android:paddingVertical="13dp"
        android:drawableEnd="@drawable/ic_eye"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_dpsx"/>

    <!-- Recordar contraseña-->

    <TextView
        android:id="@+id/tvRememberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPass"
        android:textSize="16sp"
        android:textColor="@color/azul_font"
        android:fontFamily="@font/jua"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintEnd_toEndOf="@id/etPassword"
        android:layout_marginTop="@dimen/margin_s"/>

    <!-- Botón logearse -->

    <Button
        android:id="@+id/btnLogin"
        app:backgroundTint="@null"
        style="@style/ButtonBlue"
        android:layout_width="@dimen/et_tlsx"
        android:layout_height="@dimen/et_ups"
        android:layout_marginBottom="@dimen/margin_m"
        android:text="@string/initSession"

        app:layout_constraintBottom_toTopOf="@id/tvCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Link crear cuenta nueva -->

    <TextView

        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crearCuenta"
        android:textColor="@color/azul_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_ld"/>

</androidx.constraintlayout.widget.ConstraintLayout>