<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <!-- ================= HEADER ================= -->

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/layoutHeader"
        android:layout_width="0dp"
        android:layout_height="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/gris_bg"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Administracion de perfil-->

        <TextView
            android:id="@+id/tvProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myProfile"
            android:textSize="@dimen/text_m"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_psl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Fondo circular Avatar -->
        <ImageView
            android:id="@+id/ivAvatarBackground"
            android:layout_width="@dimen/pic_ts"
            android:layout_height="@dimen/pic_ts"
            android:background="@drawable/bg_avatar_circle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/margin_tsm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Foto perfil  -->

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="@dimen/pic_llx"
            android:layout_height="@dimen/pic_upsmx"
            app:srcCompat="@drawable/pic_profile"
            app:layout_constraintTop_toTopOf="@id/ivAvatarBackground"
            app:layout_constraintBottom_toBottomOf="@id/ivAvatarBackground"
            app:layout_constraintStart_toStartOf="@id/ivAvatarBackground"
            app:layout_constraintEnd_toEndOf="@id/ivAvatarBackground"/>



        <!-- Nombre de perfil-->

        <TextView
            android:id="@+id/tvNameProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Amanda Alkemy"
            android:textSize="16sp"

            app:layout_constraintTop_toBottomOf="@id/ivAvatarBackground"
            android:layout_marginTop="@dimen/margin_s"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Editar perfil-->

        <ImageView
            android:id="@+id/ivEditar"
            android:layout_width="@dimen/pic_umx"
            android:layout_height="@dimen/pic_umx"

            app:srcCompat="@drawable/ic_edit"
            android:contentDescription="@string/editPencil"
            app:layout_constraintTop_toTopOf="@id/tvProfileTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvProfileTitle"

            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/margin_psm"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Mi informacion -->
    <Button
        android:id="@+id/btnInfo"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        android:text="@string/myInfo"
        android:gravity="start|center_vertical"
        android:textColor="@color/negro"

        android:background="@drawable/button_profile"
        app:backgroundTint="@null"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_profile"
        android:drawableRight="@drawable/ic_arrow"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_psm" />

    <!-- Mis tarjetas-->
    <Button
        android:id="@+id/btnCards"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        android:text="@string/myCards"
        android:gravity="start|center_vertical"
        android:textColor="@color/negro"

        android:background="@drawable/button_profile"
        app:backgroundTint="@null"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_card"
        android:drawableRight="@drawable/ic_arrow"

        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_mx" />

    <!-- Opciones -->

    <Button
        android:id="@+id/btnOptions"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        android:text="@string/options"
        android:gravity="start|center_vertical"
        android:textColor="@color/negro"
        android:background="@drawable/button_profile"
        app:backgroundTint="@null"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/ic_settings"
        android:drawableRight="@drawable/ic_arrow"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"

        app:layout_constraintTop_toBottomOf="@id/btnCards"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp" />

    <!-- Centro de ayuda -->

    <Button
        android:id="@+id/btnHelpCenter"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        android:layout_marginTop="@dimen/margin_mx"
        android:background="@drawable/button_profile"
        android:drawableLeft="@drawable/ic_help"
        android:drawableRight="@drawable/ic_arrow"
        android:drawablePadding="10dp"
        android:gravity="start|center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/helpCenter"
        android:textColor="@color/negro"
        app:backgroundTint="@null"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>