<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/tvSendTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendMoney"
        android:textSize="@dimen/text_m"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_psl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivBackArrow"
        android:layout_width="@dimen/pic_umx"
        android:layout_height="@dimen/pic_umx"
        app:srcCompat="@drawable/ic_back"

        app:layout_constraintBottom_toBottomOf="@id/tvSendTitle"

        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_psm"/>


    <ImageView
        android:id="@+id/ivDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/divider"
        app:layout_constraintTop_toBottomOf="@id/tvSendTitle"
        android:layout_marginTop="30dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutCardInfo"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/margin_mx"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tvSendMount"
        app:layout_constraintTop_toBottomOf="@id/ivDivider">

        <!-- Avatar imagen-->

        <FrameLayout
            android:id="@+id/avatarContainer"
            android:layout_width="60dp"
            android:layout_height="60dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgCardSelected"
            android:layout_width="@dimen/pic_ll"
            android:layout_height="@dimen/pic_ll"
            android:src="@drawable/prof_pict2" />
        </FrameLayout>

        <!-- Nombre -->

        <TextView
            android:id="@+id/tvCardName"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="Yhara Khalil"
            android:textColor="@color/negro"
            android:textSize="@dimen/text_uxm"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/avatarContainer"
            app:layout_constraintTop_toTopOf="@id/avatarContainer" />

        <!-- Correo electronico -->

        <TextView
            android:id="@+id/tvCardNum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_uxs"
            android:text="yara_khalil@gmail.com"
            android:textColor="@color/gris_font"
            android:textSize="@dimen/text_sd"
            app:layout_constraintStart_toStartOf="@id/tvCardName"
            app:layout_constraintTop_toBottomOf="@id/tvCardName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Titulo :Cantidad a transferir -->

    <TextView
        android:id="@+id/tvSendMount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mountTrans"
        android:textSize="@dimen/text_uxm"
        android:textStyle="bold"
        android:fontFamily="@font/jua"
        android:textColor="@color/negro"
        app:layout_constraintTop_toBottomOf="@id/layoutCardInfo"
        android:layout_marginTop="@dimen/margin_mx"
        app:layout_constraintStart_toStartOf="@id/tvTransferNote"/>

    <!-- Cuadro ingreso de monto para transferir -->

    <EditText
        android:id="@+id/etMountOutput"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        android:textCursorDrawable="@drawable/cursor"
        android:inputType="number"
        android:hint="12.5"
        android:paddingHorizontal="26dp"
        android:paddingVertical="13dp"
        android:textColor="@color/verde_btn"
        android:textColorHint="@color/verde_btn"
        android:background="@drawable/edit_text_green"

        app:layout_constraintTop_toBottomOf="@id/tvSendMount"
        app:layout_constraintStart_toStartOf="@id/tvSendMount"
        android:layout_marginTop="@dimen/margin_s" />

    <!-- Titulo : Notas de transferencias-->
    <TextView
        android:id="@+id/tvTransferNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transNote"
        android:textSize="@dimen/text_uxm"
        android:textStyle="bold"
        android:textColor="@color/negro"

        app:layout_constraintTop_toBottomOf="@id/etMountOutput"
        android:layout_marginTop="@dimen/margin_l"
        app:layout_constraintStart_toStartOf="@id/btnSend"/>


    <!-- Cuadro de notas de envío (opcional)-->

    <!-- Botón de enviar dinero -->

    <EditText
        android:id="@+id/etTransferNote"
        style="@style/EditText"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="200dp"
        android:hint="@string/addCommentary"

        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:maxLines="8"
        android:scrollbars="vertical"


        android:paddingHorizontal="26dp"
        android:paddingVertical="13dp"
        android:textColorHint="@color/gris_font"
        app:layout_constraintTop_toBottomOf="@id/tvTransferNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/margin_s" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="@dimen/btn_tlsx"
        android:layout_height="@dimen/btn_ups"
        app:backgroundTint="@null"
        style="@style/ButtonGreen"

        android:layout_marginBottom="@dimen/margin_mmux"
        android:text="@string/sendMoney"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_send"
        android:drawablePadding="8dp"
        android:gravity="center"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>